# icecream

./: .gitignore  Makefile.am  TODO  configure.ac
client/: Makefile.am  arg.cpp  arg.h  client.h  cpp.cpp  cpp.h  local.cpp  local.h  main.cpp  md5.c  remote.cpp  remote.h  safeguard.cpp  safeguard.h  util.cpp  util.h
compilerwrapper/: Makefile.am
daemon/: Makefile.am  client.cpp  client.h  daemon.cpp  daemon.h  environment.cpp  environment.h  file_util.cpp  load.cpp  load.h  main.cpp  native-environment.h  ncpus.c  serve.cpp  serve.h  workit.cpp  workit.h
lib/: Makefile.am
lib/misc/: Makefile.am  gcc.cpp  gcc.h  ignore-result.h  ignore-result.hxx  logging.cpp  md5.c  platform-compatibility.h  platform-compatibility.hxx  platform.cpp  platform.h  platform_compatibility.h  platform_compatibility.hxx  tempfile.c
scheduler/: Makefile.am  compileserver.cpp  compileserver.h  job.cpp  job.h  jobstat.cpp  jobstat.h  scheduler.cpp
services/: Makefile.am  all.h  blacklist-host-env.cpp  blacklist-host-env.h  blacklist-host-env.hxx  channel.cpp  channel.h  comm.cpp  comm.h  compile-file.cpp  compile-file.h  compile-result.cpp  compile-result.h  conf-cs.cpp  conf-cs.h  discover-sched.cpp  discover-sched.h  end.cpp  end.h  enum-operator.h  enum-operator.hxx  env-transfer.cpp  env-transfer.h  file-chunk.cpp  file-chunk.h  get-cs.cpp  get-cs.h  get-internal-status.cpp  get-internal-status.h  get-native-env.cpp  get-native-env.h  getifaddrs.cpp  getifaddrs.h  job-begin.cpp  job-begin.h  job-done.cpp  job-done.h  job-local-begin.cpp  job-local-begin.h  job-local-done.cpp  (+47 more)
tests/: Makefile.am  test-args.cpp  test-exitcode.cpp  test-gcc.cpp  test-ignore-result.cpp  test-md5.cpp  test-network.cpp  test-platform-compatibility.cpp  test-platform.cpp  test-services.cpp
